HRU-5873 MEP description, User name for mobile alignment issues

--- a/web-app/css/aurora-tools.css
+++ b/web-app/css/aurora-tools.css
@@ -79,7 +79,7 @@
 
 @media (min-width:0px) and (max-width:767px) {
     #toolsList #mepDescForMobile {
-        display: inline-block;
+        display: block;
     }
 
 }
